--- a/template/account/main.html
+++ b/template/account/main.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
 <link rel="stylesheet" type="text/css" href="{% static 'css/main.css ' %}" >
   </head>
-  <body class="bg-light">
+  <body >
      
     {% include 'account/navbar.html' %}
 
