--- a/template/account/customer.html
+++ b/template/account/customer.html
@@ -4,8 +4,8 @@
 
 	<br>
 
-<div class="row">
-	<div class="col-md">
+<div class="row m-2">
+	<div class="col-md ">
 		<div class="card card-body">
 			<h5>Customer:</h5>
 			<hr>
@@ -15,28 +15,29 @@
 		</div>
 	</div>
 
-	<div class="col-md">
+	<div class="col-md ">
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: </p>
-			<p>Phone: </p>
+			<p>Full Name:- {{customer.name}} </p>
+			<p>Email:- {{customer.email}} </p>
+			<p>Phone:- {{customer.phone}} </p>
 		</div>
 	</div>
 
-	<div class="col-md">
+	<div class="col-md ">
 		<div class="card card-body">
 			<h5>Total Orders</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px"></h1>
+			<h1 style="text-align: center;padding: 10px">{{total_order}}</h1>
 		</div>
 	</div>
 </div>
 
 
 <br>
-<div class="row">
-	<div class="col">
+<div class="row m-2">
+	<div class="col ">
 		<div class="card card-body">
 			<form method="get">
 
@@ -48,8 +49,8 @@
 </div>
 <br>
 
-<div class="row">
-	<div class="col-md">
+<div class="row m-2">
+	<div class="col-md ">
 		<div class="card card-body">
 			<table class="table table-sm">
 				<tr>
@@ -60,7 +61,18 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-
+			
+                {% for order in Cust_Order %}
+				<tr>
+				<td>{{order.product}}</td>
+				<td>{{order.product.category}}</td>
+				<td>{{order.date_created}}</td>
+				<td>{{order.status}}</td>
+				<td><a href="" class="btn btn-sm btn-info">Update</a></td>
+				<td><a href="" class="btn btn-sm btn-danger">Delete</a></td>
+			</tr>
+				{% endfor %}
+			
 			</table>
 		</div>
 	</div>
