--- a/template/account/dashbord.html
+++ b/template/account/dashbord.html
@@ -8,28 +8,39 @@
 
 <br>
 
-<div class="row">
-	<div class="col-md-5">
+<div class="row m-2 ">
+	<div class="col-md-5 ">
 		<h5>CUSTOMERS:</h5>
 		<hr>
 		<div class="card card-body">
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
+					
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
+					<th>Email</th>
+					<th>View</th>
 				</tr>
+					{% for customers in customers %}
+				<tr>
+                    <td>{{customers.name}}</td>
+					<td>{{customers.phone}}</td>
+					<td>{{customers.email}}</td>
+					<td><a href="{% url 'customer' customers.id %}" class="btn btn-sm btn-info">View</a></td>
+				</tr>
+					{% endfor %}
+				
 
 			</table>
 		</div>
 	</div>
 
-	<div class="col-md-7">
+	<div class="col-md-7 ">
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'cust_order' %}">Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -38,7 +49,15 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-		
+				{% for Order in Orders %}
+				<tr>
+					<td>{{Order.product}}</td>
+                    <td>{{Order.date_created}}</td>
+					<td>{{Order.status}}</td>
+					<td><a href="" class="btn btn-sm btn-info">Update</a></td>
+					<td><a href="" class="btn btn-sm btn-danger ">Delete</a></td>
+				</tr>
+					{% endfor %}
 			</table>
 		</div>
 	</div>
