--- a/template/account/navbar.html
+++ b/template/account/navbar.html
@@ -9,10 +9,10 @@
         <ul class="navbar-nav">
           
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Dashborad</a>
+            <a class="nav-link text-white" href="{% url 'home' %}">Dashborad</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Product</a>
+            <a class="nav-link text-white" href="{% url 'product' %}">Product</a>
           </li>
          
         </ul>
