--- a/template/account/product.html
+++ b/template/account/product.html
@@ -5,10 +5,15 @@
 		<br>
 
 		<div class="row">
-			<div class="col-md">
+			<div class="col-md  m-4">
+				<div class="border shadow-lg">
+
+
+				
 				<div class="card card-body">
-					<h5>Products</h5>
+					<h5 class="text-center">Products</h5>
 				</div>
+			
 				<div class="card card-body">
 					<table class="table">
 						<tr>
@@ -16,9 +21,19 @@
 							<th>Category</th>
 							<th>Price</th>
 						</tr>
+						{% for i in products %}
+                           
+						   <tr>
+							   <td>{{i.name}}</td>
+							   <td>{{i.category}}</td>
+							   <td>{{i.price}}</td>
+						   </tr>
+
+						{% endfor %}
 						
 					</table>
 				</div>
+			</div>
 			</div>
 			
 		</div>
