--- a/template/account/customer_order.html
+++ b/template/account/customer_order.html
@@ -1,11 +1,24 @@
 {%  extends 'account/main.html' %}
-
+{% load static %}
 {% block content %}
- <br>
-<form action="" method="POST" >
-    {% csrf_token %}
-    {{form.as_p}}
-<input type="Submit" name="Submit">
-</form>
+
+<br>
+<br>
+<div class="row m-4">
+
+	<div class="col-md-6">
+		<div class="card card-body">
+<br>
+			<form action="" method="POST">
+				{% csrf_token %}
+				{{form.as_p}}
+				
+				<input type="submit" name="Submit">
+			</form>
+
+		</div>
+	</div>
+</div>
+
 
 {% endblock %}
