--- a/template/account/dashbord.html
+++ b/template/account/dashbord.html
@@ -54,9 +54,10 @@
 					<td>{{Order.product}}</td>
                     <td>{{Order.date_created}}</td>
 					<td>{{Order.status}}</td>
-					<td><a href="" class="btn btn-sm btn-info">Update</a></td>
-					<td><a href="" class="btn btn-sm btn-danger ">Delete</a></td>
+					<td><a href="{% url 'update_order' Order.id %}" class="btn btn-sm btn-info">Update</a></td>
+					<td><a href="{% url 'delete_order' Order.id %}" class="btn btn-sm btn-danger">Delete</a></td>
 				</tr>
+				
 					{% endfor %}
 			</table>
 		</div>
