--- a/template/account/customer_order.html
+++ b/template/account/customer_order.html
@@ -11,8 +11,11 @@
 <br>
 			<form action="" method="POST">
 				{% csrf_token %}
-				{{form.as_p}}
-				
+				{{ formset.management_form }}
+				{% for form in formset %}
+				{{form}}
+				<hr>
+				{% endfor %}
 				<input type="submit" name="Submit">
 			</form>
 
