--- a/template/account/customer.html
+++ b/template/account/customer.html
@@ -10,7 +10,7 @@
 			<h5>Customer:</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'cust_order' customer.id %}">Place Order</a>
 
 		</div>
 	</div>
@@ -40,7 +40,7 @@
 	<div class="col ">
 		<div class="card card-body">
 			<form method="get">
-
+              {{MyFileter.form}}
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
 		</div>
@@ -55,6 +55,7 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
+					<th>Note</th>
 					<th>Category</th>
 					<th>Date Orderd</th>
 					<th>Status</th>
@@ -65,6 +66,7 @@
                 {% for order in Cust_Order %}
 				<tr>
 				<td>{{order.product}}</td>
+				<td>{{order.note}}</td>
 				<td>{{order.product.category}}</td>
 				<td>{{order.date_created}}</td>
 				<td>{{order.status}}</td>
