--- a/template/account/login.html
+++ b/template/account/login.html
@@ -114,6 +114,9 @@
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 're' %}" class="ml-2">Sign Up</a>
 					</div>
+					<div class="d-flex justify-content-center links">
+						forgot password? <a href="{% url 'reset_password' %}" class="ml-2">Reset-password?</a>
+					</div>
 			
 				</div>
 			</div>
